优化生图功能，优先存在本地，然后对外提供链接，修复轮询token的bug

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # 服务器配置
 PORT=8045
 HOST=0.0.0.0
+# IMAGE_BASE_URL=http://your-domain.com  # 可选：自定义图片访问基础 URL，默认使用 局域网ip或者本地回环
+MAX_IMAGES=10 # 最多保存的图片个数，超过就会删除时间最旧的
 
 # API 配置
 API_URL=https://daily-cloudcode-pa.sandbox.googleapis.com/v1internal:streamGenerateContent?alt=sse
