feat: 一些优化小改动

--- a/config.json.example
+++ b/config.json.example
@@ -34,7 +34,7 @@
     "useNativeAxios": false,
     "useContextSystemPrompt": true,
     "officialPromptPosition": "before",
-    "mergeSystemPrompt": true,
+    "mergeSystemPrompt": false,
     "passSignatureToClient": false,
     "debugDumpRequestResponse": false,
     "useFallbackSignature": false,
