feat: 添加假非流功能 - 非流式请求使用流式获取数据后返回非流格式

--- a/config.json
+++ b/config.json
@@ -36,11 +36,11 @@
     "officialPromptPosition": "before",
     "mergeSystemPrompt": true,
     "passSignatureToClient": false,
-    "debugDumpRequestResponse": false,
     "useFallbackSignature": false,
     "cacheAllSignatures": false,
     "cacheToolSignatures": true,
     "cacheImageSignatures": true,
-    "cacheThinking": true
+    "cacheThinking": true,
+    "fakeNonStream": true
   }
 }
